--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
 {% import "macros/multilingual.html" as multilingual %}
+{% import "macros/variable.html" as variable %}
 
 {% block content %}
 {% set content = multilingual::load_content() -%}
+{% set content = variable::all_replace(text=content) -%}
 {{ content | safe }}
 
 {% if config.extra.list_pages %}
