Set current language in base HTML template

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
+{%- import "macros/multilingual.html" as multilingual -%}
 <!doctype html>
-<html lang="{{ lang }}">
+<html lang="{{ multilingual::language_current() }}">
     <head>
         <meta charset="UTF-8">
         <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
