--- a/templates/base.html
+++ b/templates/base.html
@@ -106,24 +106,35 @@
         {% block css %}
         <link rel="stylesheet" href="{{ get_url(path='style.css', trailing_slash=false) | safe }}"/>
         {% endblock css %}
+        {% block head -%}{% endblock head -%}
     </head>
     <body theme="auto">
         <div class="w">
             <header>
-                {% if config.extra.header_nav %}
-                    {{ navigation::element(list=config.extra.header_nav) }}
-                {% endif %}
-                {% block header %}{% if title %}<h1>{{ config.title }}</h1>{% endif %}{% endblock header %}
+                {% block header_head -%}{% endblock header_head -%}
+                {% block header_menu -%}
+                    {% if config.extra.header_nav -%}
+                        {{ navigation::element(list=config.extra.header_nav) }}
+                    {% endif -%}
+                {% endblock header_menu -%}
+                {% block header -%}
+                    {% if title -%}<h1>{{ config.title }}</h1>{% endif -%}
+                {% endblock header -%}
+                {% block header_foot -%}{% endblock header_foot -%}
             </header>
             <main class="page-content" aria-label="Content">
-                {% block content %}{% endblock content %}
+                {% block content -%}{% endblock content -%}
             </main>
             <footer>
-                {% block footer %}{% endblock footer %}
-                {% if config.extra.footer_nav %}
-                    {{ navigation::element(list=config.extra.footer_nav) }}
-                {% endif %}
+                {% block footer_head -%}{% endblock footer_head -%}
+                {% block footer_menu -%}
+                    {% if config.extra.footer_nav -%}
+                        {{ navigation::element(list=config.extra.footer_nav) }}
+                    {% endif -%}
+                {% endblock footer_menu -%}
+                {% block footer_foot -%}{% endblock footer_foot -%}
             </footer>
         </div>
+        {% block js -%}{% endblock js -%}
     </body>
 </html>
