--- a/templates/page.html
+++ b/templates/page.html
@@ -31,22 +31,18 @@ Table of contents
 {{ page.content | safe }}
 {% endblock content %}
 
-{% block footer %}
+{% block footer_head %}
+{{ super() -}}
 <p class="taxonomies">
 {% if page.taxonomies.tags %}
 {% for tag in page.taxonomies.tags %}
 <a href="/tags/{{ tag | slugify }}">#{{ tag }}</a>
 {% endfor %}
+{% endif %}
 {% if page.taxonomies.categories %}
 {% for category in page.taxonomies.categories %}
 <a href="/categories/{{ category | slugify }}">+{{ category }}</a>
 {% endfor %}
 {% endif %}
-{% if page.taxonomies.contexts %}
-{% for context in page.taxonomies.contexts %}
-<a href="/contexts/{{ context | slugify }}">@{{ context }}</a>
-{% endfor %}
-{% endif %}
-{% endif %}
 </p>
-{% endblock footer %}
+{% endblock footer_head %}
