Add licence in footer note

--- a/templates/partials/base/footer_foot.html
+++ b/templates/partials/base/footer_foot.html
@@ -6,3 +6,19 @@ Made with {{ ':heart:' | markdown(inline=true) }}{% if data.author %} by {{ data
 Built with {{ '[Zola](https://www.getzola.org/)' | markdown(inline=true) | safe }}
 and {{ '[no-style-please](https://www.getzola.org/themes/no-style-please/)' | markdown(inline=true) | safe }}
 </p>
+{# Next section generated with https://chooser-beta.creativecommons.org/ -#}
+<p class="foot-note" xmlns:cc="http://creativecommons.org/ns#">
+    This work is licensed under
+    <a
+        class="creative-commons"
+        href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1"
+        target="_blank"
+        rel="license noopener noreferrer"
+    >
+        <span>CC BY-NC-SA 4.0</span>
+        <img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1" alt="Creative Commons">
+        <img src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1" alt="Attribution">
+        <img src="https://mirrors.creativecommons.org/presskit/icons/nc.svg?ref=chooser-v1" alt="Non Commercial">
+        <img src="https://mirrors.creativecommons.org/presskit/icons/sa.svg?ref=chooser-v1" alt="Share Alike">
+    </a>
+</p>
