--- a/templates/page.html
+++ b/templates/page.html
@@ -9,8 +9,12 @@
 
 {% block header %}
 <p><a href="..">..</a>/{{ page.slug }}</p>
+{% if page.date -%}
 <p class="post-meta"><time datetime="{{ page.date }}">{{ page.date }}</time></p>
+{% endif %}
+{% if page.title -%}
 <h1>{{ page.title }}</h1>
+{% endif %}
 {% endblock header %}
 
 {% block content %}
