--- a/templates/section.html
+++ b/templates/section.html
@@ -4,8 +4,9 @@
 
 {% block header %}
 <p><a href="{{ section.path }}..">..</a>{{ section.path }}</p>
-
+{% if section.title -%}
 <h1>{{ section.title }}</h1>
+{% endif %}
 {% endblock header %}
 
 {% block content %}
