Update content section in 404 template

--- a/templates/404.html
+++ b/templates/404.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block content %}
-    404
+<p class="not-found"><span class="code">404</span> Not Found</p>
 {% endblock content %}
