--- a/templates/macros/navigation.html
+++ b/templates/macros/navigation.html
@@ -23,7 +23,7 @@
                     {% set link_url = "/" ~ code ~ path -%}
                 {% else -%}
                     {% set link_url = current_url | regex_replace(pattern=get_url(path="/"), rep='') -%}
-                    {% set link_url = link_url | replace(from='/' ~ lang ~ '/', to='/' ~ code ~ '/') -%}
+                    {% set link_url = link_url | replace(from='/' ~ current_lang ~ '/', to='/' ~ code ~ '/') -%}
                 {% endif -%}
                 {% set link_values = [code, link_url, false] -%}
                 {% set_global nav_links = nav_links | concat(with=[link_values]) -%}
@@ -36,8 +36,8 @@
                 {% continue -%}
             {% endif -%}
             {% set link_url = nav_item.url -%}
-            {% if config.default_language != lang and link_url is starting_with("/") -%}
-                {% set link_url = "/" ~ lang ~ link_url -%}
+            {% if link_url is starting_with("/") -%}
+                {% set link_url = "/" ~ current_lang ~ link_url -%}
             {% endif -%}
             {% set new_tab = nav_item.new_tab | default(value=false) -%}
             {% set link_values = [link_name, link_url, new_tab] -%}
