--- a/sass/src/css/main.scss
+++ b/sass/src/css/main.scss
@@ -1,3 +1,12 @@
+/**
+ * @TODO (review/update/fix)
+ *
+ * - blockuotes: > element
+ * - code in link: [`code`](https://pepe.com)
+ * - Rendering in mobile devices screens
+ * - Improve day/night styles
+*/
+
 .w {
   max-width: 1000px;
 }
@@ -33,11 +42,11 @@ p.not-found {
     padding: 0.5em 0;
     text-align: center;
     text-transform: uppercase;
-    font-size: 4em;
+    font-size: 4rem;
     line-height: 1;
 
     span.code {
-        font-size: 3em;
+        font-size: 3rem;
         display: block;
     }
 }
@@ -84,8 +93,21 @@ details.auto-hide {
 }
 
 p, ol, ul {
+    a {
+        text-decoration-skip-ink: auto;
+        text-underline-offset: 0.14em;
+
+        &:has(code) {
+            text-decoration-color: #fff;
+
+            code {
+                background: #00e;
+            }
+        }
+    }
+
     code {
-        padding: 0.2em 0.4em;
+        padding: 0.05em 0.2em;
     }
 }
 
@@ -93,9 +115,49 @@ p > img {
     border: 0.1em solid #000;
 }
 
+/**
+ * https://freefrontend.com/css-quote-styles/
+ */
+blockquote {
+    border: none;
+    margin: 1em 0;
+    overflow: hidden;
+    padding: 0.4em 0.5em 0.4em 2em;
+    position: relative;
+
+    &::before,
+    &::after{
+        color: #777;
+        position: absolute;
+    }
+
+    &::before {
+        content:  url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='14' height='14' viewBox='0 0 24 24' fill='%23777777'><path d='M9.983 3v7.391C9.983 16.095 6.252 19.961 1 21l-.995-2.151C2.437 17.932 4 15.211 4 13H0V3h9.983zM24 3v7.391c0 5.704-3.748 9.571-9 10.609l-.996-2.151C16.437 17.932 18 15.211 18 13h-3.983V3H24z'/></svg>");
+        left: 0;
+        top: -0.1em;
+    }
+
+    &::after {
+        content: "";
+        left: 5px;
+        top: 20px;
+        width: 1px;
+        height: 100%;
+        background-color: currentColor;
+    }
+
+    p {
+        margin: 0;
+    }
+
+    p + p {
+        margin-top: 1em;
+    }
+}
+
 footer p.foot-note {
-    font-size: 0.8em;
-    margin: 0.2rem 0;
+    font-size: 0.8rem;
+    margin: 0.2em 0;
     text-align: center;
 
     a.creative-commons {
