Temporarily disable auto day/night style

--- a/templates/base.html
+++ b/templates/base.html
@@ -113,7 +113,7 @@
         {% endblock css %}
         {% block head -%}{% include "partials/base/head.html" ignore missing -%}{% endblock head -%}
     </head>
-    <body theme="auto">
+    <body theme="disable-auto-until-style-improvement">
         <div class="w">
             <header>
                 {% block header_head -%}{% include "partials/base/header_head.html" ignore missing -%}{% endblock header_head -%}
