--- a/templates/taxonomy_single.html
+++ b/templates/taxonomy_single.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block header %}
-<p><a href="{{ current_path }}">..</a>/{{ term.slug }}/</p>
+<p class="slug"><a href="{{ current_path }}..">..</a>/{{ term.slug }}/</p>
 <h1>{{ term.name }}</h1>
 {% endblock header %}
 
@@ -14,7 +14,7 @@
 <ul>
 {% for page in pages %}
     <li>
-        <a href="{{ page.permalink | safe }}">{% if page.date %}{{ page.date }} - {% endif %}{{ page.title }}</a>
+        <a href="{{ page.permalink | safe }}">{% if page.date %}{{ page.date | date(format="%Y-%m-%d") }} - {% endif %}{{ page.title }}</a>
         <br />
         {{ page.description }}
     </li>
