Display 'drafts' link in navigation menu
This commit adds the 'drafts' link to the navigation menu if there are any drafts available for the current language.

The logic iterates through the available drafts and creates a navigation link pointing to the drafts section. This allows users to easily access and manage their drafts.

--- a/templates/macros/navigation.html
+++ b/templates/macros/navigation.html
@@ -66,6 +66,14 @@
         {% endif -%}
     {% endfor %}
     {# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -#}
+    {# ## Process 'drafts' link -#}
+    {# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -#}
+    {% set drafts = get_section(path="drafts/_index.md", lang=current_lang) %}
+    {% if drafts.pages | length %}
+        {% set link_values = ["*drafts", "/" ~ current_lang ~ "/drafts", false] -%}
+        {% set_global nav_links = nav_links | concat(with=[link_values]) -%}
+    {% endif -%}
+    {# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -#}
     {# ## Build list of links -#}
     {# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -#}
     {% set path_list = current_path | default(value='404') | trim_end_matches(pat="/") -%}
