Include `rrDetailsTabs` module

--- a/templates/partials/page/src_js.html
+++ b/templates/partials/page/src_js.html
@@ -4,4 +4,5 @@
 <script src="{{ get_url(path='lib/highlightjs-copy/highlightjs-copy.min.js') }}"></script>
 {# ----------------------------- Custom Files ------------------------------ -#}
 <script src="{{ get_url(path='src/js/highlight.mjs') }}" type="module"></script>
+<script src="{{ get_url(path='src/js/details-tabs.mjs') }}" type="module"></script>
 <script src="{{ get_url(path='src/js/page.mjs') }}" type="module"></script>
