Translate taxonomy names using `multilingual::translate` macro
This commit introduces the use of the macro to translate taxonomy names in both the taxonomy list and single taxonomy pages. This allows for a more user-friendly experience for users who prefer to view the site in a different language.

--- a/templates/taxonomy_single.html
+++ b/templates/taxonomy_single.html
@@ -2,7 +2,7 @@
 
 {% block header %}
 <p class="slug"><a href="{{ current_path }}..">..</a>/{{ term.slug }}/</p>
-<h1>{{ term.name }}</h1>
+<h1>{{ multilingual::translate(key=term.name) }}</h1>
 {% endblock header %}
 
 {% block content %}
