--- a/templates/taxonomy_list.html
+++ b/templates/taxonomy_list.html
@@ -9,7 +9,7 @@
 <ul>
 {%- for term in terms %}
     <li>
-        <a href="{{ term.permalink | safe }}">{{ term.name }}</a>[{{ term.pages | length }}]
+        <a href="{{ term.permalink | safe }}">{{ multilingual::translate(key=term.name) }}</a>[{{ term.pages | length }}]
     </li>
 {%- endfor %}
 </ul>
