Enable custom mermaid.js module

--- a/templates/partials/page/src_js.html
+++ b/templates/partials/page/src_js.html
@@ -5,4 +5,5 @@
 {# ----------------------------- Custom Files ------------------------------ -#}
 <script src="{{ get_url(path='src/js/highlight.mjs') }}" type="module"></script>
 <script src="{{ get_url(path='src/js/details-tabs.mjs') }}" type="module"></script>
+<script src="{{ get_url(path='src/js/mermaid.mjs') }}" type="module"></script>
 <script src="{{ get_url(path='src/js/page.mjs') }}" type="module"></script>
