Rename `page` script to load as ECMAScript Module

--- a/templates/partials/page/src_js.html
+++ b/templates/partials/page/src_js.html
@@ -4,4 +4,4 @@
 <script src="{{ get_url(path='lib/highlightjs-copy/highlightjs-copy.min.js') }}"></script>
 {# ----------------------------- Custom Files ------------------------------ -#}
 <script src="{{ get_url(path='src/js/highlight.mjs') }}" type="module"></script>
-<script src="{{ get_url(path='src/js/page.js') }}"></script>
+<script src="{{ get_url(path='src/js/page.mjs') }}" type="module"></script>
